# Atoria

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile.jenkins  Jenkinsfile  README.md  backend.md  docker-compose.dev.yml  docker-compose.jenkins.yml  docker-compose.prod.yml  docker-compose.yml
ai/: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
ai/app/: main.py
ai/docs/: atoria_golden_sample_parkjunyoung.md  atoria_story_mission_spec.md  data_pipeline.md  ebook_draft_structure.md  ebook_job_api.md  rag_embedding.md  rag_search.md  rag_storage.md  story_intro_api.md  story_prompt_structure.md  story_quality_control.md
ai/migrations/: env.py
ai/scratch/: test_weather.py
ai/scripts/: __init__.py  debug_weather_raw.py  embed_rag_chunks.py  fix_heritage_name_spacing.py  ingest_rag_documents.py  preview_chunking.py  preview_story_prompt.py  store_rag_chunks.py  test_rag_search.py  test_story_weather.py  test_weather_client.py  try_story_intro.py
ai/tests/: conftest.py  test_context_builder.py  test_ebook_draft_service.py  test_ebook_image_prompt_builder.py  test_ebook_job_adapter.py  test_ebook_job_api.py  test_ebook_job_service.py  test_ebook_narrative_prompt_builder.py  test_ebook_narrative_service.py  test_ebook_page_builder.py  test_ebook_schema.py  test_embed_rag_chunks.py  test_health.py  test_ingest_rag_documents.py  test_mission_hook_extractor.py  test_openai_embedding_client.py  test_rag_chunk_repository.py  test_rag_chunk_storage_service.py  (+17 more)
(+739 files in other folders)
