[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atoria-ai"
version = "0.1.0"
description = "AI microservice for ATORIA - cultural heritage document ingestion, embeddings, RAG, and story generation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "ATORIA Team"}]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg[binary]==3.17.0",
    "pgvector==0.2.4",
    "openai==1.3.6",
    "httpx==0.25.1",
    "python-dotenv==1.0.0",
    "structlog==23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.11.0",
    "isort==5.12.0",
    "ruff==0.1.7",
    "mypy==1.7.0",
    "httpx==0.25.1",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
